--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 nav ul a,
 nav .brand-logo {
   color: #444;
+  font-size: 16px;
 }
 
 p {
@@ -60,8 +61,8 @@ footer.page-footer {
 
 .social {
   display: inline-block;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   margin: 0 10px;
   line-height: 70px;
   font-family: Entypo;
